tests/script_errors/bin_invalid_type/error.txt
Error: 
    1 | <<event/snot>>
      |   ^^^^^^^^^^ Not a valid data type: 'snot'